fix text overflow

--- a/src/Css/Main.css
+++ b/src/Css/Main.css
@@ -37,10 +37,10 @@ h1 {
   line-height: 1.35; }
   @media (max-width: 56.25em) {
     h1 {
-      font-size: 4rem; } }
+      font-size: 3.5rem; } }
   @media (max-width: 37.5em) {
     h1 {
-      font-size: 3rem; } }
+      font-size: 2.7rem; } }
 
 h2 {
   font-size: 1.85rem;
@@ -57,17 +57,17 @@ p {
       padding: 0 4rem 0 4rem; } }
   @media (max-width: 37.5em) {
     p {
-      font-size: 1.3rem; } }
+      font-size: 1.2rem; } }
 
 h3 {
   font-size: 3.2rem;
   line-height: 1.35; }
   @media (max-width: 56.25em) {
     h3 {
-      font-size: 2.8rem; } }
+      font-size: 2.6rem; } }
   @media (max-width: 37.5em) {
     h3 {
-      font-size: 2rem; } }
+      font-size: 1.4rem; } }
 
 h4 {
   font-size: 2.2rem;
@@ -75,11 +75,11 @@ h4 {
   line-height: 1.35; }
   @media (max-width: 56.25em) {
     h4 {
-      font-size: 2rem;
+      font-size: 1.8rem;
       margin-top: 10rem; } }
   @media (max-width: 37.5em) {
     h4 {
-      font-size: 1.8rem;
+      font-size: 1.5rem;
       margin-top: 8rem; } }
 
 .header__logo-box {
@@ -379,8 +379,7 @@ h4 {
     position: relative;
     width: fit-content;
     top: 0;
-    left: 10%;
-    overflow: hidden; }
+    left: 10%; }
     @media (max-width: 56.25em) {
       .features__section-title {
         text-align: center; } }
