--- a/src/Sass/base/_typography.scss
+++ b/src/Sass/base/_typography.scss
@@ -11,11 +11,11 @@ h1 {
   line-height: 1.35;
 
   @include respond(tab-port){
-    font-size: 4rem;
+    font-size: 3.5rem;
   }
 
   @include respond(phone){
-    font-size: 3rem;
+    font-size: 2.7rem;
   }
 }
 h2{
@@ -33,17 +33,17 @@ p {
     padding: 0 4rem 0 4rem;
   }
   @include respond(phone){
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
 }
 h3 {
   font-size: 3.2rem;
   line-height: 1.35;
   @include respond(tab-port){
-    font-size: 2.8rem;
+    font-size: 2.6rem;
   }
   @include respond(phone){
-    font-size: 2rem;
+    font-size: 1.4rem;
   }
 }
 h4 {
@@ -51,11 +51,11 @@ h4 {
   font-weight: bold;
   line-height: 1.35;
   @include respond(tab-port){
-    font-size: 2rem;
+    font-size: 1.8rem;
     margin-top: 10rem;
   }
   @include respond(phone){
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     margin-top: 8rem;
   }
 }
