--- a/src/Sass/layout/_Features.scss
+++ b/src/Sass/layout/_Features.scss
@@ -7,10 +7,9 @@
    width: fit-content;
    top: 0;
    left: 10%;
-   overflow: hidden;
+   
    
    @include respond(tab-port){
-    
     text-align: center;
   }
   @include respond(phone){
